add Loading in html page

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
   <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
   <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+  <link href="%PUBLIC_URL%/Loading.css" rel="stylesheet" type="text/css">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#000000">
 
@@ -18,7 +19,19 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+    <div className="page">
+      <div id="load">
+        <div>G</div>
+        <div>N</div>
+        <div>I</div>
+        <div>D</div>
+        <div>A</div>
+        <div>O</div>
+        <div>L</div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
