--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,14 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#000000">
 
-  <title>Portfolio</title>
+  <title>Davide Candia</title>
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "jgp7pz4zlp");
+  </script>
 </head>
 
 <body>
